Add background image and styling

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,5 +1,6 @@
 .home-container {
   width: 100vw;
   height: 100vh;
-  background-image: ;
+  background-image: url('/src/Assets/backgroundherb_720.jpg');
+  background-size: cover;
 }
