--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,6 +1,20 @@
 .home-container {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-image: url('/src/Assets/backgroundherb_720.jpg');
   background-size: cover;
+}
+
+.nav-container {
+  height: 5vh;
+  width: 100vw;
+}
+
+.title-container {
+  color: whitesmoke;
+  font-size: 50px;
+  padding-top: 5%;
 }
