--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -1,11 +1,25 @@
 .form-container {
   display: flex;
-  width: 30%;
-  height: 5%;
-  background-color: #D9D9D9;
+  flex-direction: row;
+  justify-content: center;
+  height: 8%;
+  width: 100%;
   color: #482644;
+  border-radius: 5px;
+}
+
+.input{
+  width: 35%;
+  height: 60%;
+  text-align: center;
+  font-weight: bolder;
+  background-color: #D9D9D9;
 }
 
 .form-button {
   width: 5%;
+  height: 70%;
+  background-color: #D9D9D9;
+  color: gray;
+  font-weight: bolder;
 }
