--- a/src/Components/PlantCard/PlantCard.css
+++ b/src/Components/PlantCard/PlantCard.css
@@ -1,6 +1,6 @@
 .plant-card {
-  height: 40vh;
-  width: 30vw;
+  height: 250px;
+  width: 250px;
   display: flex;
   flex-direction: column;
   align-items: center;
