--- a/src/Components/PlantCard/PlantCard.css
+++ b/src/Components/PlantCard/PlantCard.css
@@ -1,5 +1,5 @@
 .plant-card {
-  height: 250px;
+  height: 320px;
   width: 250px;
   display: flex;
   flex-direction: column;
@@ -9,7 +9,7 @@
 .card-image {
   border-radius: 30px;
   width: 100%;
-  height: 80%;
+  height: 70%;
 }
 
 .card-title {
@@ -22,4 +22,5 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+  color: #f9fafa;
 }
