--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -1,29 +1,41 @@
 .form-container {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  height: 8%;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  height: 10%;
   width: 100%;
   color: #482644;
   border-radius: 5px;
 }
 
-.input{
-  width: 35%;
+.input-and-button{
+  width: 37%;
   height: 60%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.input {
+  width: 92%;
+  height: 80%;
   text-align: center;
   font-weight: bolder;
   background-color: #D9D9D9;
 }
-
 .form-button {
-  width: 5%;
-  height: 70%;
+  margin-top: 1px;
+  width: 8%;
+  height: 86%;
   background-color: #D9D9D9;
   color: gray;
   font-weight: bolder;
+  border: none;
 }
 
 .error-message {
-  color: #D9D9D9;
+  color: #482644;
+  font-size: larger;
+  background-color: #82977C;
 }
