Update margin on Form to add sufficient spacing

--- a/src/Components/Plants/Plants.css
+++ b/src/Components/Plants/Plants.css
@@ -11,9 +11,12 @@
 
 .plants-title {
   font-size: 28px;
-  margin: 60px 0;
+  margin: 40px 0 0 0;
   text-align: center;
+}
 
+.form-container {
+  margin: 20px;
 }
 
 .plants-display-grid {
