--- a/src/Components/Plants/Plants.css
+++ b/src/Components/Plants/Plants.css
@@ -24,6 +24,7 @@
   width: 100%;
   grid-template-columns: repeat(1, 1fr);
   grid-gap: 20px;
+  box-sizing: border-box;
   justify-items: center;
 }
 
