--- a/src/Components/PlantCard/PlantCard.css
+++ b/src/Components/PlantCard/PlantCard.css
@@ -4,23 +4,41 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: rgba(249, 250, 250, .3);
+  border-radius: 30px;
+  padding: 10px;
+
 }
 
 .card-image {
   border-radius: 30px;
-  width: 100%;
+  width: 95%;
   height: 70%;
+  margin-top: 5px;
+  transition: transform 0.2s ease-in-out;
 }
 
 .card-title {
-  padding: 20px;
+  padding: 15px;
   margin: 0;
 }
 
 .update-my-garden-button {
   appearance: none;
+  font-size: 22px;
+  font-family: 'Times New Roman', Times, serif;
   border: none;
   background-color: transparent;
   cursor: pointer;
   color: #f9fafa;
+  transition: color 0.2s ease-in-out;;
+}
+
+.card-image:hover {
+  transform: scale(1.02);
+}
+
+.update-my-garden-button:hover {
+  color: rgb(57, 56, 56);
+  transform: translateY(-1px);
 }
