--- a/src/Components/PlantCard/PlantCard.css
+++ b/src/Components/PlantCard/PlantCard.css
@@ -7,7 +7,7 @@
   background-color: rgba(249, 250, 250, .3);
   border-radius: 30px;
   padding: 10px;
-
+  transition: background-color 0.35s ease-in-out;
 }
 
 .card-image {
@@ -15,7 +15,8 @@
   width: 95%;
   height: 70%;
   margin-top: 5px;
-  transition: transform 0.2s ease-in-out;
+  transition: transform 0.35s ease-in-out;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.6);
 }
 
 .card-title {
@@ -26,19 +27,22 @@
 .update-my-garden-button {
   appearance: none;
   font-size: 22px;
-  font-family: 'Times New Roman', Times, serif;
   border: none;
   background-color: transparent;
   cursor: pointer;
   color: #f9fafa;
-  transition: color 0.2s ease-in-out;;
-}
-
-.card-image:hover {
-  transform: scale(1.02);
+  transition: color 0.3s ease-in-out;
 }
 
 .update-my-garden-button:hover {
   color: rgb(57, 56, 56);
   transform: translateY(-1px);
+}
+
+.plant-card:hover {
+  background-color: rgba(249, 250, 250, 0.421);
+}
+
+.plant-card:hover > .card-image {
+  transform: scale(1.02);
 }
