--- a/src/Components/PlantCard/PlantCard.css
+++ b/src/Components/PlantCard/PlantCard.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgba(249, 250, 250, .3);
   border-radius: 30px;
   padding: 10px;
   transition: background-color 0.35s ease-in-out;
@@ -32,6 +31,7 @@
   cursor: pointer;
   color: #f9fafa;
   transition: color 0.3s ease-in-out;
+  font-family: 'El Messiri', sans-serif ;
 }
 
 .update-my-garden-button:hover {
