--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -1,16 +1,15 @@
 .form-container {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
-  height: 10%;
+  height: 8%;
   width: 100%;
   color: #482644;
   border-radius: 5px;
 }
 
 .input-and-button{
-  width: 37%;
+  width: 40%;
   height: 60%;
   display: flex;
   flex-direction: row;
@@ -18,20 +17,41 @@
 }
 
 .input {
-  width: 92%;
+  width: 85%;
+}
+
+.go-to-plants-link {
+  width: 10%;
+}
+
+.form-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.input, 
+.form-button {
+  appearance: none;
+  /* width: 100%; */
   height: 80%;
   text-align: center;
   font-weight: bolder;
   background-color: #D9D9D9;
-}
-.form-button {
-  margin-top: 1px;
-  width: 8%;
-  height: 86%;
-  background-color: #D9D9D9;
-  color: gray;
-  font-weight: bolder;
   border: none;
+  box-shadow: none;
+}
+
+
+.input:hover, 
+.form-button:hover {
+ transform: none;
+ border: none;
+ box-shadow: none;
+}
+
+.form-button {
+  border: 1px solid #82977C;
 }
 
 .error-message {
