--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -14,10 +14,13 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  border-radius: 10px;
 }
 
 .input {
   width: 85%;
+  color: #503571;
+  font-weight: bolder;
 }
 
 .go-to-plants-link {
