--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -18,21 +18,16 @@
   border-radius: 10px;
 }
 
-/* .plants-link-container {
-  width: 10%;
-  height: 100%;
-} */
-
 .input, 
 .plants-link {
   appearance: none;
-  /* width: 100%; */
   height: 80%;
   text-align: center;
   font-weight: bolder;
   background-color: #D9D9D9;
   border: none;
   box-shadow: none;
+  border: 1px solid #266;
 }
 
 
@@ -41,6 +36,12 @@
  transform: none;
  border: none;
  box-shadow: none;
+ appearance: none;
+}
+
+.input:focus {
+  border: none;
+  box-shadow: none;
 }
 
 .plants-link {
