--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -4,20 +4,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   background-image: url('/public/Assets/backgroundherb_720.jpg');
   background-size: cover;
 }
 
-.nav-container {
-  height: 5vh;
-  width: 100vw;
-}
-
 .title-container {
+  height: 25%;
   color: #D9D9D9;
   font-size: 60px;
   padding-top: 5%;
   font-weight: bolder;
+}
+
+.home-title {
+  margin: 0;
 }
 
 .form-container {
