--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -4,12 +4,26 @@
 .active {
   display: block;
 }
-.navigation {
-  height: 11vh;
-  width: 20vh;
+
+nav {
+  display: inline-block;
+  height: 10%;
+  width: 100vw;
   display: flex;
-  align-items: center;
-  position: relative;
+  justify-content: flex-end;
+  /* position: relative; */
+  padding: 0.5rem 0rem;
+  /* background-color: #fff; */
+  color: black;
+  box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
+}
+.navigation {
+  /* display: inline-block; */
+  height: 20%;
+  width: 100vw;
+  display: flex;
+  justify-content: flex-end;
+  /* position: relative; */
   padding: 0.5rem 0rem;
   background-color: #fff;
   color: black;
@@ -17,18 +31,19 @@
 }
 .hamburger {
   border: 0;
-  height: 40px;
-  width: 40px;
+  height: 45px;
+  width: 45px;
   padding: 0.5rem;
   border-radius: 50%;
-  background-color: rgb(241, 232, 233);
+  background-color: #D9D9D9;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
-  position: absolute;
+  /* position: absolute; */
   top: 7%;
   right: 87%;
   transform: translateY(-50%);
-  display: block;
+  /* display: block; */
+  margin: 2%;
 }
 .hamburger:hover {
   background-color: #e7b9e4;
