--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -10,18 +10,34 @@
 }
 
 .title-container {
-  height: 25%;
+  height: 20%;
+  width: 70%;
   color: #D9D9D9;
   font-size: 60px;
   padding-top: 5%;
   font-weight: bolder;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .home-title {
   margin: 0;
+  margin-top: 5%;
+  text-shadow: 2px 2px 3px #503571;
 }
 
 .form-container {
-  height: 20vh;
+  height: 15%;
   width: 100vw;
+}
+
+.logo-image {
+  background-image: url('/public/Assets/radish2.png');
+  background-size: cover;
+  /* max-height: 80%; */
+  height: 100%;
+  width: 15%;
+  transform: rotate(-35deg);
 }
