--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,19 +1,20 @@
 .home-container {
-  width: 100vw;
-  height: 100vh;
+  background-image: url('/public/Assets/backgroundherb_720.jpg');
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  background-image: url('/public/Assets/backgroundherb_720.jpg');
-  background-size: cover;
+  text-align: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 .title-container {
   height: 20%;
+  max-width: 70%;
   width: 70%;
   color: #D9D9D9;
-  font-size: 60px;
+  font-size: 3.25em;
   padding-top: 5%;
   font-weight: bolder;
   display: flex;
@@ -35,9 +36,48 @@
 
 .logo-image {
   background-image: url('/public/Assets/garden_logos/cauliflower_720.png');
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
   max-height: 80%;
-  height: 100%;
+  height: 90%;
   width:15%;
   /* transform: rotate(-35deg); */
+}
+
+@media screen and (max-width: 1068px) {
+
+  .home-container {
+    justify-content: space-evenly;
+  }
+
+  .title-container {
+    font-size: 50px;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 50%;
+  }
+  .logo-image {
+    max-width: 80%;
+    max-height: 50%;
+    width: 28%;
+    height: 40%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    top: 0;
+  }
+}
+
+@media screen and (max-width: 830px) {
+
+  .title-container {
+    flex-direction: column;
+    height: 60%;
+  }
+  .logo-image {
+    width: 40%;
+    height: 40%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-top: 5%;
+  }
 }
