--- a/src/Components/PlantCard/PlantCard.css
+++ b/src/Components/PlantCard/PlantCard.css
@@ -1,6 +1,6 @@
 .plant-card {
   height: 320px;
-  width: 250px;
+  width: 270px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,8 +12,8 @@
 
 .card-image {
   border-radius: 30px;
-  width: 95%;
-  height: 70%;
+  width: 270px;
+  height: 210px;
   margin-top: 5px;
   transition: transform 0.35s ease-in-out;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.6);
