--- a/src/Components/LoadingCard/LoadingCard.css
+++ b/src/Components/LoadingCard/LoadingCard.css
@@ -1,21 +1,28 @@
 .loading-card {
-  height: 320px;
-  width: 250px;
+  height: 360px;
+  width: 310px;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 30px;
   padding: 10px;
   transition: background-color 0.35s ease-in-out;
-  color: rgba(249, 250, 250, 0.421);;
   background-color: rgba(249, 250, 250, 0.421);
   animation: skeleton-loading 1s linear infinite alternate;
 }
 
+.loading-gif {
+  padding: 15px;
+  margin: 0;
+  font-size: 28px;
+  margin: 60px 0;
+  text-align: center;
+}
+
 .loading-image {
   border-radius: 30px;
-  width: 95%;
-  height: 70%;
+  width: 280px;
+  height: 230px;
   margin-top: 5px;
   transition: transform 0.35s ease-in-out;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.6);
