--- a/src/Components/Plants/Plants.css
+++ b/src/Components/Plants/Plants.css
@@ -23,6 +23,7 @@
   box-sizing: border-box;
   justify-items: center;
   padding-bottom: 80px; 
+  margin-right: 80px;
 }
 
 @media screen and (min-width: 720px) {
