--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -2,17 +2,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 8%;
-  width: 100%;
+  height: 40%;
   color: #482644;
   border-radius: 5px;
 }
 
 .input-and-button{
   width: 40%;
-  height: 60%;
+  height: 80%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
@@ -21,7 +20,6 @@
 .input, 
 .plants-link {
   appearance: none;
-  height: 85%;
   text-align: center;
   font-weight: bolder;
   background-color: #D9D9D9;
@@ -31,7 +29,7 @@
 }
 
 .input:hover, 
-.form-button:hover {
+.plants-link:hover {
  transform: none;
  border: none;
  box-shadow: none;
@@ -47,22 +45,76 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80%;
+  height: 40%;
   width: 10%;
+  border-radius: 15%;
 }
 
 .input {
   width: 85%;
+  height: 45%;
   color: #503571;
   font-weight: bolder;
+  margin-bottom: 2%;
+  border-radius: 5%;
 }
 
 .form-button {
   border: 1px solid #82977C;
+  border-radius: 5%;
 }
 
+.button-image {
+  font-size: 2rem;
+}
 .error-message {
   color: #482644;
   font-size: larger;
   background-color: #82977C;
 }
+
+@media screen and (max-width: 1068px) {
+  .form-container {
+    height: 30%;
+   }
+   
+   .input, 
+   .plants-link {
+     height: 35%;
+   }
+}
+
+@media screen and (max-width: 887px) {
+  .input-and-button{
+    width: 80%;
+  }
+
+  .form-container {
+  height: 25%;
+  width: 70%;
+  }
+
+  .input, 
+  .plants-link {
+    height: 35%;
+  }
+}
+
+@media screen and (max-width: 786px) {
+  .input-and-button{
+    width: 80%;
+  }
+  .form-container {
+    width: 100%;
+  }
+}
+
+/* @media screen and (max-width: 486px) {
+
+  .input-and-button{
+    width: 80%;
+  }
+  .form-container {
+    width: 100%;
+  }
+} */
