--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -5,28 +5,37 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
-.title-container {
-  height: 20%;
+.title-input-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
   max-width: 70%;
   width: 70%;
   color: #D9D9D9;
   font-size: 3.25em;
-  padding-top: 5%;
+  margin-top: 8%;
   font-weight: bolder;
+  background-color: #224136;
+  border-radius: 5%;
+}
+
+.logo-and-title {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  width: 100%;
 }
 
 .home-title {
   margin: 0;
-  margin-top: 5%;
-  text-shadow: 2px 2px 3px #503571;
+  /* margin-top: 5%; */
+  text-shadow: 1px 1px 2px #4D1320;
 }
 
 .form-container {
@@ -35,49 +44,81 @@
 }
 
 .logo-image {
-  background-image: url('/public/Assets/garden_logos/cauliflower_720.png');
+  background-image: url('/public/Assets/garden_logos/beet3_720.png');
   background-size: contain;
   background-repeat: no-repeat;
-  max-height: 80%;
-  height: 90%;
-  width:15%;
-  /* transform: rotate(-35deg); */
+  width: 8%;
+  transform: rotate(-35deg);
 }
 
 @media screen and (max-width: 1068px) {
 
-  .home-container {
+  /* .home-container {
     justify-content: space-evenly;
+  } */
+
+  .title-input-container {
+    flex-direction: column;
+    justify-content: space-evenly;
+    justify-content: center;
+    font-size: 2.75em;
+    height: 60%;
+    width: 65%;
   }
 
-  .title-container {
-    font-size: 50px;
-    flex-direction: column;
-    justify-content: flex-start;
+  .logo-and-title {
     height: 50%;
+    flex-direction: column;
+    align-items: center;
   }
+
   .logo-image {
-    max-width: 80%;
-    max-height: 50%;
-    width: 28%;
-    height: 40%;
+    width: 10%;
+    height: 50%;
     background-size: contain;
     background-repeat: no-repeat;
     top: 0;
+    margin: 0;
   }
 }
 
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 887px) {
 
-  .title-container {
+  .title-input-container {
     flex-direction: column;
+    justify-content: space-evenly;
     height: 60%;
+    font-size: 2.75em;
   }
+
+  .logo-and-title {
+    height: 70%;
+    flex-direction: column;
+  }
+
   .logo-image {
-    width: 40%;
-    height: 40%;
+    width: 20%;
     background-size: contain;
     background-repeat: no-repeat;
-    margin-top: 5%;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 786px) {
+  .title-input-container {
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 60%;
+    font-size: 2.75em;
+  }
+}
+
+@media screen and (max-width: 486px) {
+  .title-input-container {
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 65%;
+    font-size: 2.75em;
+    width: 80%;
   }
 }
