--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -14,15 +14,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 50%;
-  max-width: 70%;
+  height: 47%;
+  max-width: 62%;
   width: 70%;
   color: #D9D9D9;
   font-size: 3.25em;
   margin-top: 8%;
   font-weight: bolder;
   background-color: #224136;
-  border-radius: 5%;
+  border-radius: 16px;
 }
 
 .logo-and-title {
