Pass zipcode down to Plant to render the correct route

--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -80,6 +80,10 @@
   background-color: #82977C;
 }
 
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 @media screen and (max-width: 1068px) {
   .form-container {
     height: 30%;
