--- a/src/Components/PlantCard/PlantCard.css
+++ b/src/Components/PlantCard/PlantCard.css
@@ -21,7 +21,10 @@
 
 .card-title {
   padding: 15px;
+  text-align: center;
   margin: 0;
+  color: white;
+  text-decoration: none;
 }
 
 .update-my-garden-button {
@@ -32,7 +35,8 @@
   cursor: pointer;
   color: #f9fafa;
   transition: color 0.3s ease-in-out;
-  font-family: 'El Messiri', sans-serif ;
+  font-family: 'El Messiri', sans-serif;
+  width: 18vw;
 }
 
 .update-my-garden-button:hover {
