--- a/src/Components/UserProfile/UserProfile.css
+++ b/src/Components/UserProfile/UserProfile.css
@@ -3,13 +3,23 @@
   height: 45vh;
 }
 
+.x-image-back-button {
+  width: 3vw;
+  padding: 30px;
+}
+
+.back-logo-container {
+  display: flex;
+  padding: 33px;
+}
+
 .socials {
   color: white;
   display: flex;
   flex-direction: column;
-  height: 35rem;
+   height: 35rem;
   width: 50rem;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .user-image-container {
@@ -46,9 +56,10 @@
 }
 
 .linked-in {
-  color: white;
+  color: rgb(187, 127, 171);
 }
 
 .github {
-  color: white;
+  color: rgb(187, 127, 171);
 }
+
