--- a/src/Components/UserProfile/UserProfile.css
+++ b/src/Components/UserProfile/UserProfile.css
@@ -5,12 +5,14 @@
 
 .x-image-back-button {
   width: 3vw;
-  padding: 30px;
 }
 
 .back-logo-container {
   display: flex;
-  padding: 33px;
+}
+
+.profile-page {
+  padding: 50px;
 }
 
 .socials {
