--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -33,9 +33,8 @@
 }
 
 .home-title {
-  font-size: 88px;
+  font-size: 1.5em;
   margin: 0;
-  /* margin-top: 5%; */
   text-shadow: 1px 1px 2px #4d1320;
 }
 
@@ -53,10 +52,6 @@
 }
 
 @media screen and (max-width: 1068px) {
-
-  /* .home-container {
-    justify-content: space-evenly;
-  } */
 
   .title-input-container {
     flex-direction: column;
