--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -7,6 +7,7 @@
   text-align: center;
   width: 100%;
   height: 100vh;
+  padding-top: 75px;
 }
 
 .title-input-container {
@@ -21,7 +22,7 @@
   font-size: 3.25em;
   margin-top: 8%;
   font-weight: bolder;
-  background-color: #224136;
+  background-color: hsl(157, 31%, 13%);
   border-radius: 16px;
 }
 
