--- a/src/Components/UserProfile/UserProfile.css
+++ b/src/Components/UserProfile/UserProfile.css
@@ -9,9 +9,10 @@
 .profile-page {
   padding: 50px;
 }
+
 .user-image-container {
   display: flex;
-  height: 35rem;
+  height: 25rem;
   justify-content: center;
   width: 50rem;
   align-items: center;
@@ -19,7 +20,7 @@
 
 .profile-pic {
   border-radius: 15px;
-  height: 45vh;
+  height: 50vh;
 }
 
 .user-info-container {
@@ -31,20 +32,18 @@
   color: white;
   display: flex;
   flex-direction: column;
-  height: 35rem;
+  height: 25rem;
   justify-content: center;
   width: 50rem;
 }
 
 .savedPlantsGrid {
-  align-items: center;
   color: white;
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   height: 80%;
   justify-items: space-evenly;
-  padding: 37px;
   place-items: center;
   width: 80%;
 }
@@ -55,7 +54,7 @@
 }
 
 .profile-name {
-  font-size: 35px;
+  font-size: 2em;
   margin: 0px;
 }
 
