--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -18,6 +18,7 @@
 
 .active {
   display: block;
+  width: 100%
 }
 
 .navigation {
@@ -69,10 +70,10 @@
 
 .expanded > ul {
   position: absolute;
-  top: 30%;
+  top: 8vh;
   right: 0;
   flex-direction: column;
-  width: 20%;
+  width: 15%;
   height: fit-content;
   background-color: #D9D9D9;
   border-bottom:1px solid black;
@@ -106,8 +107,8 @@
 .expanded > ul> li:hover,
 .userProfiles > option:hover {
   background-color: #eee;
-  color: rgb(171, 116, 156);
-  border: 1px solid rgb(171, 116, 156);
+  color: rgb(187, 127, 171);
+  border: 1px solid rgb(187, 127, 171);
 }
 a {
   text-decoration: none;
