--- a/src/Components/UserProfile/UserProfile.css
+++ b/src/Components/UserProfile/UserProfile.css
@@ -20,10 +20,11 @@
 
 .profile-pic {
   border-radius: 15px;
-  height: 50vh;
+  height: 24em;
 }
 
 .user-info-container {
+  height: 31em;
   display: flex;
   padding: 20px;
 }
@@ -41,7 +42,7 @@
   color: white;
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   height: 80%;
   justify-items: space-evenly;
   place-items: center;
