--- a/src/Components/PlantCard/PlantCard.css
+++ b/src/Components/PlantCard/PlantCard.css
@@ -36,7 +36,7 @@
   color: #f9fafa;
   transition: color 0.3s ease-in-out;
   font-family: 'El Messiri', sans-serif;
-  width: 18vw;
+  width: 330px;
 }
 
 .update-my-garden-button:hover {
