--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -15,13 +15,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 47%;
-  max-width: 58%;
+  height: 50%;
+  font-size: 40px;
   width: 70%;
   color: #D9D9D9;
-  font-size: 3.25em;
   margin-top: 8%;
-  font-weight: bolder;
   background-color: hsl(157, 31%, 13%);
   border-radius: 16px;
 }
@@ -44,15 +42,15 @@
   width: 100vw;
 }
 
-.logo-image {
+/* .logo-image {
   background-image: url('../../Images/beet3_720.png');
   background-size: contain;
   background-repeat: no-repeat;
   width: 7.5%;
   transform: rotate(-35deg);
-}
+} */
 
-@media screen and (max-width: 1068px) {
+/* @media screen and (max-width: 1068px) {
 
   .title-input-container {
     flex-direction: column;
@@ -118,4 +116,4 @@
     font-size: 2.75em;
     width: 80%;
   }
-}
+} */
