--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -16,7 +16,6 @@
   justify-content: center;
   align-items: center;
   height: 50%;
-  font-size: 40px;
   width: 70%;
   color: #D9D9D9;
   margin-top: 8%;
@@ -32,7 +31,7 @@
 }
 
 .home-title {
-  font-size: 1.5em;
+  font-size: 4em;
   margin: 0;
   text-shadow: 1px 1px 2px #4d1320;
 }
@@ -42,41 +41,27 @@
   width: 100vw;
 }
 
-/* .logo-image {
-  background-image: url('../../Images/beet3_720.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 7.5%;
-  transform: rotate(-35deg);
-} */
 
-/* @media screen and (max-width: 1068px) {
 
-  .title-input-container {
-    flex-direction: column;
-    justify-content: space-evenly;
-    justify-content: center;
-    font-size: 2.75em;
-    height: 60%;
-    width: 65%;
-  }
-
-  .logo-and-title {
-    height: 50%;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .logo-image {
-    width: 10%;
-    height: 50%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    top: 0;
-    margin: 0;
+@media screen and (min-width: 800px) {
+  .home-title {
+    font-size: 6em;
   }
 }
 
+@media screen and (min-width: 950px) {
+  .logo-image {
+    background-image: url('../../Images/beet3_720.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 7.5%;
+    transform: rotate(-35deg);
+  }
+}
+
+
+
+/*
 @media screen and (max-width: 887px) {
 
   .title-input-container {
