--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -22,7 +22,7 @@
 }
 
 .navigation {
-  margin-right: 1%;
+  /* margin-right: 1%; */
   height: 10%;
   width: 100vw;
   display: flex;
@@ -38,7 +38,7 @@
 }
 
 .hamburger {
-  border: 0;
+  border: none;
   height: 45px;
   width: 45px;
   padding: 0.5rem;
@@ -47,7 +47,7 @@
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
   transform: translateY(-50%);
-  margin: 3%;
+  margin: 80px 40px;
 }
 .hamburger:hover {
   background-color: #e7b9e4;
