--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 .dropdown {
   display:none;
-  background-color: #D9D9D9;
+  background-color: rgba(217, 217, 217, 0.75);
   width: 30%;
 }
 
@@ -22,7 +22,7 @@
 }
 
 .navigation {
-  /* margin-right: 1%; */
+  margin-right: 1%;
   height: 10%;
   width: 100vw;
   display: flex;
@@ -38,25 +38,27 @@
 }
 
 .hamburger {
-  border: none;
+  border: 0;
   height: 45px;
   width: 45px;
   padding: 0.5rem;
   border-radius: 50%;
-  background-color: #D9D9D9;
+  background-color: rgba(217, 217, 217, 0.75);
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
   transform: translateY(-50%);
   margin: 80px 40px;
 }
 .hamburger:hover {
-  background-color: #e7b9e4;
+  background-color: #4E1320;
+  color: #f9fafa;
   cursor: pointer;
 }
 
 .navigationMenu {
   display: none;
-  margin-bottom: 50%;
+  /* margin-bottom: 50%; */
+  width: 150px;
 }
 
 
@@ -70,14 +72,13 @@
 
 .expanded > ul {
   position: absolute;
-  top: 8vh;
-  right: 0;
+  top: 11vh;
+  right: 10;
   flex-direction: column;
-  width: 15%;
   height: fit-content;
-  background-color: #D9D9D9;
-  border-bottom:1px solid black;
-  border-right:1px solid black;
+  background-color: rgba(217, 217, 217, 0.75);
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
   display: flex;
   padding: 0;
 }
@@ -89,7 +90,7 @@
 .dropdown.profile {
   top: 0;
   left: 100%;
-  background-color: #D9D9D9;
+  background-color: rgba(217, 217, 217, 0.75);
   width: 20%;
 }
 
@@ -101,15 +102,19 @@
   width: 100%;
   padding: 0.5rem 0;
   list-style-type: none;
-  border-block-end: 2px solid black;
+  border-block-end: 1px solid black;
 }
 
 .expanded > ul> li:hover,
 .userProfiles > option:hover {
-  background-color: #eee;
-  color: rgb(187, 127, 171);
-  border: 1px solid rgb(187, 127, 171);
+  background-color: rgba(217, 217, 217, 0.9);
+  color: #4E1320;
+  border: 1px solid #4E1320;
 }
 a {
   text-decoration: none;
+}
+
+.log-out {
+  color: #4E1320;
 }
