--- a/src/Components/UserProfile/UserProfile.css
+++ b/src/Components/UserProfile/UserProfile.css
@@ -56,17 +56,21 @@
   margin-bottom: 20px;
 }
 
-.linked-in {
-  color: rgb(187, 127, 171);
-}
-
-.github {
-  color: rgb(187, 127, 171);
+.linked-in,
+.github,
+.email {
+  color: #f9fafa;
 }
 
 .email {
   padding: 25px;
-  color: rgb(187, 127, 171);
+  color: #f9fafa;
+}
+
+.linked-in:hover,
+.github:hover,
+.email:hover {
+  color: rgb(97, 141, 125);
 }
 
 .users-plants-container {
